matrix-synapse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"matrix-synapse"},"name":"matrix-synapse","namespace":"caritas"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"matrix-synapse"}},"template":{"metadata":{"labels":{"app":"matrix-synapse"}},"spec":{"containers":[{"env":[{"name":"SYNAPSE_SERVER_NAME","value":"91.99.219.182"},{"name":"SYNAPSE_REPORT_STATS","value":"no"}],"image":"matrixdotorg/synapse:latest","livenessProbe":{"httpGet":{"path":"/_m [...]
  creationTimestamp: "2025-10-22T19:22:43Z"
  generation: 6
  labels:
    app: matrix-synapse
  name: matrix-synapse
  namespace: caritas
  resourceVersion: "922771"
  uid: 9011ef53-2711-4e56-b784-523a7cf9983f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: matrix-synapse
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-10-30T18:38:44Z"
      creationTimestamp: null
      labels:
        app: matrix-synapse
    spec:
      containers:
      - env:
        - name: SYNAPSE_SERVER_NAME
          value: 91.99.219.182
        - name: SYNAPSE_REPORT_STATS
          value: "no"
        - name: SYNAPSE_ENABLE_AUTHENTICATED_MEDIA
          value: "false"
        image: matrixdotorg/synapse:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /_matrix/client/versions
            port: 8008
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: synapse
        ports:
        - containerPort: 8008
          protocol: TCP
        - containerPort: 8009
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /_matrix/client/versions
            port: 8008
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: synapse-data
        - mountPath: /data/homeserver.yaml
          name: homeserver-config
          subPath: homeserver.yaml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: synapse-data
        persistentVolumeClaim:
          claimName: matrix-synapse-data
      - configMap:
          defaultMode: 420
          name: matrix-homeserver-oidc
        name: homeserver-config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-10-29T14:15:34Z"
    lastUpdateTime: "2025-10-29T14:15:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-10-22T19:22:44Z"
    lastUpdateTime: "2025-10-30T18:39:07Z"
    message: ReplicaSet "matrix-synapse-b9d4c9647" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
